# charm-arch-examples

flags-callback/vanilla/: metadata.yaml  vanilla.py
flags-reactions/vanilla/: vanilla.py
python-layers/pyproject.toml/vanilla/: pyproject.toml
statemachine-callback-states/vanilla/: vanilla.py
statemachine/vanilla/: layer.yaml  vanilla.py
