[build-system]
requires = ["charm-tools", "wheel"]
build-backend = "charmtools.build"

[tool.charmtools.metadata]
name = "vanilla"
summary = "Vanilla is an open-source, pluggable, themeable, multi-lingual forum."
maintainer = "Your Name <your@email.tld>"
description = """
    Vanilla is designed to deploy and grow small communities to scale.
    This charm deploys Vanilla Forums as outlined by the Vanilla Forums installation guide.
"""
tags = [
  "social",
]
requires.database = {interface = "mysql"}

[tool.charmtools.config]
# override default provided by apache-php
port.default = 8080
